[gd_scene load_steps=3 format=2]

[ext_resource path="res://Globals/SceneManager/GlobalTheme/GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/MainMenu/SettingsMenu/SettingsMenu.gd" type="Script" id=2]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 10.0
margin_top = 38.0
margin_right = 180.0
margin_bottom = 118.0
theme = ExtResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="SaveConfirmation" type="AcceptDialog" parent="."]
margin_left = 494.0
margin_top = 316.0
margin_right = 1023.0
margin_bottom = 449.0
window_title = "Exit Settings?"
resizable = true

[node name="OptionConfirm" type="AcceptDialog" parent="."]
margin_left = 494.0
margin_top = 316.0
margin_right = 1023.0
margin_bottom = 449.0
window_title = "Save Settings?"
resizable = true

[node name="Timer" type="Timer" parent="OptionConfirm"]

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
mouse_filter = 1
custom_constants/label_valign_bg = 0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="ScrollContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 51.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Video"]
margin_right = 854.0
margin_bottom = 916.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Fullscreen" type="HSplitContainer" parent="TabContainer/Video/VBoxContainer"]
margin_right = 854.0
margin_bottom = 74.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Video/VBoxContainer/Fullscreen"]
margin_top = 19.0
margin_right = 200.0
margin_bottom = 55.0
text = "Fullscreen"

[node name="FullscreenCheck" type="CheckBox" parent="TabContainer/Video/VBoxContainer/Fullscreen"]
margin_left = 780.0
margin_right = 854.0
margin_bottom = 74.0
size_flags_horizontal = 8
align = 1

[node name="Borderless" type="HSplitContainer" parent="TabContainer/Video/VBoxContainer"]
margin_top = 84.0
margin_right = 854.0
margin_bottom = 158.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Video/VBoxContainer/Borderless"]
margin_top = 19.0
margin_right = 200.0
margin_bottom = 55.0
text = "Borderless"

[node name="BorderCheck" type="CheckBox" parent="TabContainer/Video/VBoxContainer/Borderless"]
margin_left = 780.0
margin_right = 854.0
margin_bottom = 74.0
size_flags_horizontal = 8
align = 1

[node name="Resolution" type="HSplitContainer" parent="TabContainer/Video/VBoxContainer"]
margin_top = 168.0
margin_right = 854.0
margin_bottom = 214.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Video/VBoxContainer/Resolution"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 41.0
text = "Resolution"

[node name="ResolutionOptions" type="OptionButton" parent="TabContainer/Video/VBoxContainer/Resolution"]
margin_left = 208.0
margin_right = 854.0
margin_bottom = 46.0
align = 1

[node name="FPS" type="HSplitContainer" parent="TabContainer/Video/VBoxContainer"]
margin_top = 224.0
margin_right = 854.0
margin_bottom = 270.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Video/VBoxContainer/FPS"]
margin_top = 5.0
margin_right = 180.0
margin_bottom = 41.0
text = "Framerate"

[node name="FpsOptions" type="OptionButton" parent="TabContainer/Video/VBoxContainer/FPS"]
margin_left = 188.0
margin_right = 854.0
margin_bottom = 46.0
align = 1

[node name="Controls" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 51.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls"]
margin_right = 854.0
margin_bottom = 916.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Left" type="HSplitContainer" parent="TabContainer/Controls/VBoxContainer"]
margin_right = 854.0
margin_bottom = 46.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Controls/VBoxContainer/Left"]
margin_top = 5.0
margin_right = 180.0
margin_bottom = 41.0
text = "Move Left"

[node name="Button" type="Button" parent="TabContainer/Controls/VBoxContainer/Left"]
margin_left = 188.0
margin_right = 854.0
margin_bottom = 46.0
text = "A"

[node name="Right" type="HSplitContainer" parent="TabContainer/Controls/VBoxContainer"]
margin_top = 56.0
margin_right = 854.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Controls/VBoxContainer/Right"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 41.0
text = "Move Right"

[node name="Button" type="Button" parent="TabContainer/Controls/VBoxContainer/Right"]
margin_left = 208.0
margin_right = 854.0
margin_bottom = 46.0
text = "D"

[node name="Up" type="HSplitContainer" parent="TabContainer/Controls/VBoxContainer"]
margin_top = 112.0
margin_right = 854.0
margin_bottom = 158.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Controls/VBoxContainer/Up"]
margin_top = 5.0
margin_right = 140.0
margin_bottom = 41.0
text = "Move Up"

[node name="Button" type="Button" parent="TabContainer/Controls/VBoxContainer/Up"]
margin_left = 148.0
margin_right = 854.0
margin_bottom = 46.0
text = "W"

[node name="Down" type="HSplitContainer" parent="TabContainer/Controls/VBoxContainer"]
margin_top = 168.0
margin_right = 854.0
margin_bottom = 214.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Controls/VBoxContainer/Down"]
margin_top = 5.0
margin_right = 180.0
margin_bottom = 41.0
text = "Move Down"

[node name="Button" type="Button" parent="TabContainer/Controls/VBoxContainer/Down"]
margin_left = 188.0
margin_right = 854.0
margin_bottom = 46.0
text = "S"

[node name="Shoot" type="HSplitContainer" parent="TabContainer/Controls/VBoxContainer"]
margin_top = 224.0
margin_right = 854.0
margin_bottom = 270.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Controls/VBoxContainer/Shoot"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 41.0
text = "Shoot"

[node name="Button" type="Button" parent="TabContainer/Controls/VBoxContainer/Shoot"]
margin_left = 108.0
margin_right = 854.0
margin_bottom = 46.0
text = "RMB"

[node name="Teleport" type="HSplitContainer" parent="TabContainer/Controls/VBoxContainer"]
margin_top = 280.0
margin_right = 854.0
margin_bottom = 326.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Controls/VBoxContainer/Teleport"]
margin_top = 5.0
margin_right = 160.0
margin_bottom = 41.0
text = "Teleport"

[node name="Button" type="Button" parent="TabContainer/Controls/VBoxContainer/Teleport"]
margin_left = 168.0
margin_right = 854.0
margin_bottom = 46.0
text = "LMB"

[node name="Dash" type="HSplitContainer" parent="TabContainer/Controls/VBoxContainer"]
margin_top = 336.0
margin_right = 854.0
margin_bottom = 382.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Controls/VBoxContainer/Dash"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 41.0
text = "Dash"

[node name="Button" type="Button" parent="TabContainer/Controls/VBoxContainer/Dash"]
margin_left = 88.0
margin_right = 854.0
margin_bottom = 46.0
text = "Space"

[node name="Audio" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 51.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio"]
margin_right = 370.0
margin_bottom = 122.0
custom_constants/separation = 10

[node name="MasterTest" type="Button" parent="TabContainer/Audio/VBoxContainer"]
margin_right = 675.0
margin_bottom = 46.0
text = "Test Master Audio"

[node name="EffectsTest" type="Button" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 56.0
margin_right = 675.0
margin_bottom = 102.0
text = "Test Effects Audio"

[node name="MasterVolume" type="HSplitContainer" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 112.0
margin_right = 675.0
margin_bottom = 148.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="HSplitContainer" type="HSplitContainer" parent="TabContainer/Audio/VBoxContainer/MasterVolume"]
margin_right = 587.0
margin_bottom = 36.0
rect_min_size = Vector2( 587, 0 )
size_flags_horizontal = 3
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/MasterVolume/HSplitContainer"]
margin_right = 260.0
margin_bottom = 36.0
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/MasterVolume/HSplitContainer"]
margin_left = 272.0
margin_right = 587.0
margin_bottom = 36.0
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0

[node name="volume" type="Label" parent="TabContainer/Audio/VBoxContainer/MasterVolume"]
margin_left = 595.0
margin_right = 675.0
margin_bottom = 36.0
text = "1.00"

[node name="EffectsVolume" type="HSplitContainer" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 158.0
margin_right = 675.0
margin_bottom = 194.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/autohide = 0
custom_constants/separation = 0
dragger_visibility = 1

[node name="HSplitContainer" type="HSplitContainer" parent="TabContainer/Audio/VBoxContainer/EffectsVolume"]
margin_right = 587.0
margin_bottom = 36.0
rect_min_size = Vector2( 587, 0 )
size_flags_horizontal = 3
dragger_visibility = 1

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/EffectsVolume/HSplitContainer"]
margin_right = 280.0
margin_bottom = 36.0
text = "Effects Volume"

[node name="EffectsSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/EffectsVolume/HSplitContainer"]
margin_left = 292.0
margin_right = 587.0
margin_bottom = 36.0
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0

[node name="volume" type="Label" parent="TabContainer/Audio/VBoxContainer/EffectsVolume"]
margin_left = 595.0
margin_right = 675.0
margin_bottom = 36.0
text = "1.00"
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="confirmed" from="SaveConfirmation" to="." method="_on_SaveConfirmation_confirmed"]
[connection signal="confirmed" from="OptionConfirm" to="." method="_on_OptionConfirm_confirmed"]
[connection signal="timeout" from="OptionConfirm/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TabContainer/Video/VBoxContainer/Fullscreen/FullscreenCheck" to="." method="_on_FullscreenCheck_pressed"]
[connection signal="pressed" from="TabContainer/Video/VBoxContainer/Borderless/BorderCheck" to="." method="_on_BorderCheck_pressed"]
[connection signal="item_selected" from="TabContainer/Video/VBoxContainer/Resolution/ResolutionOptions" to="." method="_on_ResolutionOptions_item_selected"]
[connection signal="item_selected" from="TabContainer/Video/VBoxContainer/FPS/FpsOptions" to="." method="_on_FpsOptions_item_selected"]
[connection signal="pressed" from="TabContainer/Audio/VBoxContainer/MasterTest" to="." method="_test_master_audio"]
[connection signal="pressed" from="TabContainer/Audio/VBoxContainer/EffectsTest" to="." method="_test_effects_audio"]
[connection signal="value_changed" from="TabContainer/Audio/VBoxContainer/MasterVolume/HSplitContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/VBoxContainer/EffectsVolume/HSplitContainer/EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
